gccida/c0/output_asm_operand_names
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/final.c:3528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *expr; // [rsp+18h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/final.c:3542:14: error: expected identifier or '('
 struct expr = get_mem_expr_from_op( operandsa[opordera[i]], &addressp); 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/final.c:3543:7: error: expected expression
if (  struct expr ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/final.c:3549:7: error: use of undeclared identifier 'arg0'
v5 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/final.c:3551:7: error: use of undeclared identifier 'arg0'
v4 = &arg0; 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_asm_operand_names/src/obj/final.o] Error 1
